--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ h2 {
   text-decoration:none;
   
   
-   body{
 <h1>DYSTROPICANA || GAME ANTHOLOGY <span></span></h1><br>
 <h1>by <span></span></h1><br>
 <h2> <a style='text-decoration:none; color:' href="https://twitter.com/troyduguid?lang=de/" style="color: lightblue; text decoration: none" > troyduguid</a> </h2><br>
@@ -67,4 +66,4 @@ h2 {
 <h2>SURFERS PARADISE</h2>
 <img src="002.png" alt="SURFERS PARADISE" style="width:304px;height:228px;">
 
-   }
+</style>
