--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@ h2 {
 <br>
 <br>
 <h2>SURFERS PARADISE</h2>
-<img src="002.png" alt="SURFERS PARADISE" style="width:304px;height:228px;">
+<img src="http://wireframepoetics.github.io/dystropicana/002.png" alt="SURFERS PARADISE" style="width:304px;height:228px;">
 
 </style>
